# ad_engine

./: .env.sample  Cargo.toml  ToDo.txt
migrations/2022-12-29-115705_create_users/: up.sql
src/: main.rs  schema.rs
src/api/: auth_controller.rs  user_controller.rs
src/config/: app.rs  auth.rs
src/models/: user.rs
src/services/: auth_service.rs  user_service.rs
static/: index.html  login.html  register.html
